changed extract to flavour

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             Milk
         </li>
         <li>
-            Vanilla Extract
+            Vanilla Flavour
         </li>
         <li>
             Chocolate
