changed to more

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             Chocolate
         </li>
         <li>
-            Icing
+            More Icing
         </li>
         <li>
             cream
