changed to bluberries

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             Vanilla Flavour
         </li>
         <li>
-            Chocolate
+            Blueberries
         </li>
         <li>
             More Icing
