changed to chocolate chip

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             Vanilla Extract
         </li>
         <li>
-            Chocolate
+            Chocolate chip
         </li>
         <li>
             More Icing
